# dev_manager

./: README.md  com.github.pedromiguel_dev.dev_manager.json  meson.build
data/: com.github.pedromiguel_dev.dev_manager.desktop.in  com.github.pedromiguel_dev.dev_manager.gschema.xml  com.github.pedromiguel_dev.dev_manager.metainfo.xml.in  dev_manager.gresource.data.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  dev_manager.gresource.xml  main.vala  meson.build
src/ui/: window.ui
src/ui/manage_pages/: manage_page.ui  manage_page_index.ui  manage_page_spaces.ui
src/widgets/: window.vala
src/widgets/manage_pages/: manage_page.vala  manage_page_index.vala  manage_page_spaces.vala
